feat(header): crear componente MarkenxHeader con estilos y fuentes personalizadas
- Se reemplazó el contenido del AppComponent por el nuevo componente <app-markenx-header>.
- Se creó el componente MarkenxHeader con estructura HTML y estilos SCSS personalizados.
- Se añadieron nuevas fuentes (Bebas Neue y Barlow en variantes Regular y Bold).
- Se incorporó el logotipo de la UDLA en formato SVG.
- Se definieron variables globales de color, sombras y tipografía en styles.scss.

https://tita2-202610.atlassian.net/browse/PNJ-67

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+$color-white: #FFFFFF;
+$primary-color-red: #8B0E2A;
+$shadow-color: rgb(34, 34, 34, 0.3);
+
+@font-face {
+  font-family: 'Bebas Neue';
+  src: url('./assets/fonts/BebasNeue-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Barlow';
+  src: url('./assets/fonts/Barlow/Barlow-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Barlow Bold';
+  src: url('./assets/fonts/Barlow/Barlow-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: bold;
+}
+
+$font-h1: 'Bebas Neue', sans-serif;
+$font-normal-regular: 'Barlow', sans-serif;
+$font-normal-bold: 'Barlow Bold', sans-serif;
