--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,1 @@
-<div class="container mt-5">
-  <h1 class="text-center text-primary">🚀 Taller Angular + Bootstrap + PrimeNG</h1>
-
-  <!-- Ejemplo Bootstrap -->
-  <div class="row mt-4">
-    <div class="col-md-6 text-center">
-      <button class="btn btn-success">Botón Bootstrap</button>
-    </div>
-
-    <!-- Ejemplo PrimeNG -->
-    <div class="col-md-6 text-center">
-      <p-button label="Botón PrimeNG" icon="pi pi-check"></p-button>
-    </div>
-  </div>
-
-  <!-- Tabla PrimeNG -->
-  <div class="row mt-5">
-    <div class="col">
-      <p-table [value]="[{name: 'Juan', edad: 25}, {name: 'Ana', edad: 30}]">
-        <ng-template pTemplate="header">
-          <tr>
-            <th>Nombre</th>
-            <th>Edad</th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-persona>
-          <tr>
-            <td>{{persona.name}}</td>
-            <td>{{persona.edad}}</td>
-          </tr>
-        </ng-template>
-      </p-table>
-    </div>
-  </div>
-</div>
+<app-markenx-header></app-markenx-header>
