feat(sidebar): crear componente de barra lateral con opciones y subopciones
- Se agregó el componente <app-markenx-sidebar> y sus subcomponentes:
  - AppSidebarComponent: gestiona las opciones principales y la selección actual.
  - AppSidebarOptionComponent: representa cada opción individual con soporte para subopciones.
- Se integró el sidebar en app.component.html junto al header.
- Se incorporaron PrimeNG MenuModule y PanelModule para futuras expansiones del sidebar.
- Se definieron nuevos colores y variables globales en styles.scss para soporte visual del sidebar:
  - Tonos de gris, negro y rojo con hover.
- Se añadieron estilos específicos para opciones, subopciones y divisores activos.
- Se implementó lógica para selección de opción activa y expansión condicional de subopciones.

https://tita2-202610.atlassian.net/browse/PNJ-66

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 $color-white: #FFFFFF;
+$color-black: #222222;
+$color-light-gray: #EEEEEE;
+$color-light-gray-40: #C4C4C4;
+$color-dark-gray: #717171;
+$color-dark-gray-80: #5D5D5D;
 $primary-color-red: #8B0E2A;
+$primary-hover-red: #FFF0F3;
 $shadow-color: rgb(34, 34, 34, 0.3);
 
 @font-face {
