feat: refactorización de la estructura de la aplicación e integración de componentes de markenx-dxp
Se actualizó angular.json para incluir los assets y estilos de @chrisjmora/markenx-dxp-assets.

Se añadieron dependencias de @chrisjmora/markenx-dxp-assets y @chrisjmora/markenx-dxp-components en package.json y package-lock.json.

Se renombró el proyecto a @chrisjmora/markenx-dxp-student-ui y se actualizó la versión a 1.0.0.

Se implementó el routing para asignaciones, lecciones, modos de juego y progreso en app-routing.module.ts.

Se reemplazaron los componentes de header y sidebar por un nuevo componente de layout en app.component.html.

Se eliminaron los componentes de header y sidebar no utilizados y sus estilos.

Se crearon nuevos componentes para las vistas de asignaciones y lecciones.

Se actualizó app.module.ts para declarar los nuevos componentes e importar los módulos necesarios.

Se eliminaron los archivos de fuentes antiguas y el logo de los assets.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-markenx-header></app-markenx-header>
-<app-markenx-sidebar></app-markenx-sidebar>
+<app-markenx-layout
+  headerTitle="ISWZ3104-INTRODUCCIÓN A MARKETING I"
+  userName="Christian Jácome"
+  [menuItems]="menuItems">
+  <router-outlet></router-outlet>
+</app-markenx-layout>
